--- a/new_piscine/ex04/module00-ex04/Cargo.toml
+++ b/new_piscine/ex04/module00-ex04/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "module00-ex04"
+default-run = "default"
 version = "0.1.0"
 edition = "2021"
 authors = ["pjay"]
@@ -13,4 +14,11 @@ publish = false
 	name = "other"
 	path = "src/other.rs"
 	debug_assertions = false
-
+[[bin]]
+	name = "default"
+	path = "src/default.rs"
+[[bin]]
+	name = "test-overflows"
+	path = "src/overflows.rs"
+	[profile.dev]
+	overflows-checks = false
